--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,23 @@
             "detail": "compiler: C:\\MinGW\\bin\\g++.exe"
         },
         {
+            "type": "process",
+            "label": "run make clean",
+            "command": "C:\\MinGW\\bin\\mingw32-make.exe",
+            "args": [
+                "clean"
+            ],
+            "options": {},
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "compiler: C:\\MinGW\\bin\\g++.exe"
+        },
+        {
             "type": "cppbuild",
             "label": "C/C++: g++.exe build active file",
             "command": "C:\\MinGW\\bin\\g++.exe",
