--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "type": "process",
             "label": "run make command",
-            "command": "C:\\MinGW\\bin\\mingw32-make.exe",
+            "command": "C:\\msys64\\usr\\bin\\make.exe",
             "args": [],
             "options": {},
             "problemMatcher": [
@@ -14,12 +14,12 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "compiler: C:\\MinGW\\bin\\g++.exe"
+            "detail": "compiler: C:\\msys64\\mingw64\\bin\\g++.exe"
         },
         {
             "type": "process",
             "label": "run make clean",
-            "command": "C:\\MinGW\\bin\\mingw32-make.exe",
+            "command": "C:\\msys64\\usr\\bin\\make.exe",
             "args": [
                 "clean"
             ],
@@ -30,6 +30,5 @@
             "group": "build",
             "detail": "compiler: C:\\MinGW\\bin\\g++.exe"
         },
-  
     ]
 }
